core/main/default/objects/QliToSapFieldMapping__mdt/QliToSapFieldMapping__mdt.object-meta.xml
<CustomObject>
    <description
  >Set declarative field mappings from Quote Lines to Sales Agreement Products. Not used if Apex Mapping Plugin is noted in settings.</description>
    <label>QLI to SAP Field Mapping</label>
    <pluralLabel>QLI to SAP Field Mappings</pluralLabel>
</CustomObject>