core/main/default/objects/QliToSapFieldMapping__mdt/fields/QliField__c.field-meta.xml
<CustomField>
    <fullName>QliField__c</fullName>
    <description>Source quote line field.</description>
    <inlineHelpText
  >Source quote line field. Will be mapped to the Sales Agreement Product.</inlineHelpText>
    <label>Quote Line Field (source)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>