core/main/default/objects/QliToSapFieldMapping__mdt/fields/SapField__c.field-meta.xml
<CustomField>
    <fullName>SapField__c</fullName>
    <description>Target Sales Agreement Product field.</description>
    <inlineHelpText
  >Target Sales Agreement Product field. Will be mapped from the Quote Line.</inlineHelpText>
    <label>Sales Agreement Product Field (target)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>