core/main/default/objects/QliToSapFieldMapping__mdt/fields/SumOnMerge__c.field-meta.xml
<CustomField>
    <fullName>SumOnMerge__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >When the Sales Agreement Product is merged, should the value be summed (must be a number data type)?</description>
    <inlineHelpText
  >When the Sales Agreement Product is merged, should the value be summed (must be a number data type)?</inlineHelpText>
    <label>Sum Field on Merge</label>
    <type>Checkbox</type>
</CustomField>