core/main/default/objects/QliToSapFieldMapping__mdt/fields/WeightedAverageOnMerge__c.field-meta.xml
<CustomField>
    <fullName>WeightedAverageOnMerge__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >When the Sales Agreement Product is merged, should the weighted average be calculated (must be a number data type)? The quantity is used to calculate the weighted average.</description>
    <inlineHelpText
  >When the Sales Agreement Product is merged, should the weighted average be calculated (must be a number data type)? The quantity is used to calculate the weighted average.</inlineHelpText>
    <label>Weighted Average of Field on Merge</label>
    <type>Checkbox</type>
</CustomField>