core/main/default/objects/QliToSapFieldMapping__mdt/listViews/AllMappings.listView-meta.xml
<ListView>
    <fullName>AllMappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>QliField__c</columns>
    <columns>SapField__c</columns>
    <columns>SumOnMerge__c</columns>
    <columns>WeightedAverageOnMerge__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mappings</label>
</ListView>